--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+img {
+  width: 20px;
+  padding-left: 10px;
+  padding-top: 20px;
+}
+
+.on{
+  background-color: green;
+}
+
+.off{
+  background-color: red;
+}
+
